hphp/hack/test/typecheck/reified_generics/wildcard_as_shape.php.exp
WARN: File "wildcard_as_shape.php", line 5, characters 3-44:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `shape('a' => _, 'b' => _)`. (Warn[12012])
WARN: File "wildcard_as_shape.php", line 9, characters 3-44:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `shape('a' => T, 'b' => _)`. (Warn[12012])
WARN: File "wildcard_as_shape.php", line 13, characters 3-44:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `shape('a' => _, 'b' => T)`. (Warn[12012])
WARN: File "wildcard_as_shape.php", line 17, characters 3-44:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `shape('a' => T, 'b' => T)`. (Warn[12012])
ERROR: File "wildcard_as_shape.php", line 5, characters 8-44:
Invalid `as` expression hint (Typing[4195])
  File "wildcard_as_shape.php", line 7, characters 12-12:
  The `as` operator cannot be used with _ in a shape (use `mixed` instead)
  File "wildcard_as_shape.php", line 6, characters 12-12:
  The `as` operator cannot be used with _ in a shape (use `mixed` instead)
ERROR: File "wildcard_as_shape.php", line 9, characters 8-44:
Invalid `as` expression hint (Typing[4195])
  File "wildcard_as_shape.php", line 11, characters 12-12:
  The `as` operator cannot be used with _ in a shape (use `mixed` instead)
ERROR: File "wildcard_as_shape.php", line 13, characters 8-44:
Invalid `as` expression hint (Typing[4195])
  File "wildcard_as_shape.php", line 14, characters 12-12:
  The `as` operator cannot be used with _ in a shape (use `mixed` instead)
